--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://mag.hempin.org/" />
     <meta property="og:title" content="Hemp'in Universe - DEWII Magazine" />
     <meta property="og:description" content="Welcome to Hemp'in Universe - Your gateway to the solarpunk future. Explore sustainable hemp innovations, green technology, and community markets." />
-    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:image" content="https://mag.hempin.org/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Hemp'in Universe" />
@@ -33,7 +33,7 @@
     <meta property="twitter:url" content="https://mag.hempin.org/" />
     <meta property="twitter:title" content="Hemp'in Universe - DEWII Magazine" />
     <meta property="twitter:description" content="Welcome to Hemp'in Universe - Your gateway to the solarpunk future. Explore sustainable hemp innovations, green technology, and community markets." />
-    <meta property="twitter:image" content="/og-image.svg" />
+    <meta name="twitter:image" content="https://mag.hempin.org/og-image.png" />
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#10b981" />
