--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://mag.hempin.org/" />
     <meta property="og:title" content="Hemp'in Universe - DEWII Magazine" />
     <meta property="og:description" content="Welcome to Hemp'in Universe - Your gateway to the solarpunk future. Explore sustainable hemp innovations, green technology, and community markets." />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1764440446135-4dd83e472cb6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxncmVlbiUyMHNwaGVyZSUyMGdsb3dpbmclMjBvcmJ8ZW58MXx8fHwxNzY0NjE2MTc1fDA&ixlib=rb-4.1.0&q=80&w=1200" />
+    <meta property="og:image" content="https://dhsqlszauibxintwziib.supabase.co/storage/v1/object/public/brand%20files/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Hemp'in Universe" />
@@ -33,7 +33,7 @@
     <meta property="twitter:url" content="https://mag.hempin.org/" />
     <meta property="twitter:title" content="Hemp'in Universe - DEWII Magazine" />
     <meta property="twitter:description" content="Welcome to Hemp'in Universe - Your gateway to the solarpunk future. Explore sustainable hemp innovations, green technology, and community markets." />
-    <meta property="twitter:image" content="https://images.unsplash.com/photo-1764440446135-4dd83e472cb6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxncmVlbiUyMHNwaGVyZSUyMGdsb3dpbmclMjBvcmJ8ZW58MXx8fHwxNzY0NjE2MTc1fDA&ixlib=rb-4.1.0&q=80&w=1200" />
+    <meta property="twitter:image" content="https://dhsqlszauibxintwziib.supabase.co/storage/v1/object/public/brand%20files/og-image.png" />
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#10b981" />
